# ANDES_simulator

./: .gitignore  CLAUDE.md  CLEANUP_PLAN.md  README.md  Rband_varyZemax.py  TODO.md  VALIDATION_REPORT.md  fiber_efficiency.md  make_hdf.py  pyechelle_test_ANDES.py  pyproject.toml
FF_code/: pyechelle_test_ANDES_ff_even_odd.py  pyechelle_test_ANDES_ff_first_slit.py
FP_code/: pyechelle_test_ANDES_fp.py  pyechelle_test_ANDES_fp_single_fiber.py
HDF/: MakeHDF.md  make_hdf.py
PSF/: Dkernel.py  sumIFU.py
SED/: sky_emission_YK.csv
YJH/: MakeHDF_Hband.py  MakeHDF_Jband.py  MakeHDF_Yband.py
andes_simulator/: FRAMEWORK_SUMMARY.md  README.md  __init__.py  __main__.py  andes-sim
andes_simulator/cli/: __init__.py  andes.py  main.py  mosaic.py  utils.py
andes_simulator/configs/examples/: fabry_perot_all_fibers.yaml  fabry_perot_single_fiber.yaml  flat_field_even.yaml  flat_field_even_odd.yaml  flat_field_odd.yaml  flat_field_single_fiber.yaml  flat_field_slits.yaml  h_lfc_tmb.yaml  hdf_generation.yaml  j_lfc_tmb.yaml  spectrum_simulation.yaml  thermal_variation.yaml  y_lfc_tmb.yaml
andes_simulator/core/: __init__.py  andes.py  config.py  instruments.py  mosaic.py  simulator.py  sources.py
andes_simulator/models/: __init__.py  hdf_builder.py  thermal.py
andes_simulator/postprocess/: __init__.py  combine.py  psf.py
andes_simulator/scripts/: __init__.py  batch_runner.py
andes_simulator/sources/: __init__.py  fabry_perot.py  flat_field.py  lfc.py  stellar.py  wavelength_filter.py
data/: vel_shifts_1.json  vel_shifts_H.json  vel_shifts_U.json
legacy/: ORIGINAL_SCRIPT_MAPPING.md  README.md  Rband_varyZemax.py  pyechelle_test_ANDES.py
legacy/FF_code/: pyechelle_test_ANDES_ff.py  pyechelle_test_ANDES_ff_calib.py  pyechelle_test_ANDES_ff_second_slit.py  pyechelle_test_ANDES_ff_single_fiber.py
legacy/FP_code/: pyechelle_test_ANDES_fp_single_fiber.py
legacy/YJH/: MakeHDF_Jband.py  MakeHDF_Yband.py
scripts/: H_fiber_profile.py  R_starsky.py  combine_fibers.sh  fp_slitAB_allbands.sh  ifu_star.py  lfc_allfib_allbands.sh  mosaic_LR-J_starsky.py  psf_comp_R.sh  trace_allbands.sh
tests/: test_cli_dry_run.py  test_config_serialization.py  test_config_validation.py  test_fabry_perot_source.py  test_fiber_combiner.py  test_fiber_resolution.py  test_flat_field_source.py  test_get_fiber_list.py  test_instruments.py  test_lfc_source.py  test_output_paths.py  test_simulator_helpers.py  test_source_factory_utils.py  test_source_scaling.py  test_wavelength_filter.py
