[project]
name = "andes-simulator"
version = "1.0.0"
description = "ANDES E2E Simulation Framework - Unified simulation and analysis tools"
authors = [
    {name = "ANDES E2E Team", email = "andes@eso.org"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["astronomy", "spectrograph", "simulation", "andes", "e2e"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "astropy>=5.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "pyechelle>=0.4.0",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.5.0",
]
development = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]
all = [
    "andes-simulator[visualization,development]"
]

[project.scripts]
andes-sim = "andes_simulator.cli.main:main"

[project.urls]
Homepage = "https://github.com/ivh/ANDES_E2E_scripts"
Documentation = "https://github.com/ivh/ANDES_E2E_scripts/blob/main/README.md"
Repository = "https://github.com/ivh/ANDES_E2E_scripts.git"
Issues = "https://github.com/ivh/ANDES_E2E_scripts/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["andes_simulator"]

[tool.hatch.build.targets.sdist]
include = [
    "/andes_simulator",
    "/configs",
    "/README.md",
    "/ORIGINAL_SCRIPT_MAPPING.md",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyechelle.*",
    "astropy.*",
    "scipy.*",
    "matplotlib.*",
]
ignore_missing_imports = true