[project]
name = "andes-simulator"
version = "1.0.0"
description = "ANDES E2E Simulation Framework - Unified simulation and analysis tools"
authors = [
    {name = "ANDES E2E Team", email = "andes@eso.org"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["astronomy", "spectrograph", "simulation", "andes", "e2e"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "astropy>=5.0.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "pyechelle>=0.4.0",
    "ruff>=0.14.9",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.5.0",
]
development = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
]
all = [
    "andes-simulator[visualization,development]"
]

[project.scripts]
andes-sim = "andes_simulator.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["andes_simulator"]

[tool.hatch.build.targets.sdist]
include = [
    "/andes_simulator",
    "/README.md",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

